# OptiTrack_Project

./: README.md  README_zh.md
install/: local_setup.sh  setup.sh
log/: latest_build
src/motive_streamer/: CMakeLists.txt
src/motive_streamer/include/motive_streamer/: motive_streamer.hpp
src/motive_streamer/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/motive_streamer/install/motive_streamer/include/motive_streamer/motive_streamer/msg/: motive_rigid_body.h  motive_rigid_body.hpp  motive_rigid_body_list.h  motive_rigid_body_list.hpp  rosidl_generator_c__visibility_control.h  rosidl_generator_cpp__visibility_control.hpp  rosidl_typesupport_fastrtps_c__visibility_control.h  rosidl_typesupport_fastrtps_cpp__visibility_control.h  rosidl_typesupport_introspection_c__visibility_control.h
src/motive_streamer/install/motive_streamer/lib/motive_streamer/: motive_streamer_node
src/motive_streamer/install/motive_streamer/share/ament_index/resource_index/package_run_dependencies/: motive_streamer
src/motive_streamer/install/motive_streamer/share/motive_streamer/: local_setup.dsv  local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/motive_streamer/install/motive_streamer/share/motive_streamer/cmake/: ament_cmake_export_dependencies-extras.cmake  ament_cmake_export_include_directories-extras.cmake  ament_cmake_export_libraries-extras.cmake  ament_cmake_export_targets-extras.cmake  export_motive_streamer__rosidl_generator_cExport-noconfig.cmake  export_motive_streamer__rosidl_generator_cExport.cmake  export_motive_streamer__rosidl_generator_cppExport.cmake  export_motive_streamer__rosidl_generator_pyExport-noconfig.cmake  export_motive_streamer__rosidl_generator_pyExport.cmake  export_motive_streamer__rosidl_typesupport_fastrtps_cExport-noconfig.cmake  export_motive_streamer__rosidl_typesupport_fastrtps_cExport.cmake  export_motive_streamer__rosidl_typesupport_fastrtps_cppExport-noconfig.cmake  export_motive_streamer__rosidl_typesupport_fastrtps_cppExport.cmake  motive_streamerConfig.cmake  motive_streamer__rosidl_typesupport_cExport-noconfig.cmake  motive_streamer__rosidl_typesupport_cExport.cmake  motive_streamer__rosidl_typesupport_cppExport-noconfig.cmake  motive_streamer__rosidl_typesupport_cppExport.cmake  motive_streamer__rosidl_typesupport_introspection_cExport-noconfig.cmake  motive_streamer__rosidl_typesupport_introspection_cExport.cmake  motive_streamer__rosidl_typesupport_introspection_cppExport-noconfig.cmake  motive_streamer__rosidl_typesupport_introspection_cppExport.cmake  rosidl_cmake-extras.cmake  rosidl_cmake_export_typesupport_libraries-extras.cmake  rosidl_cmake_export_typesupport_targets-extras.cmake
src/motive_streamer/install/motive_streamer/share/motive_streamer/config/: stream_rigid.yaml
src/motive_streamer/install/motive_streamer/share/motive_streamer/msg/: MotiveRigidBody.idl  MotiveRigidBodyList.idl  MotiveRigidBodyList.msg
src/motive_streamer/launch/: motive_streamer.py
src/motive_streamer/msg/: MotiveRigidBody.msg
src/motive_streamer/natnet/: Readme-NatNet.txt
src/motive_streamer/src/: motive_streamer.cpp  motive_streamer_main.cpp
src/relative_pose_node/: CMakeLists.txt
src/relative_pose_node/install/: local_setup.sh  setup.sh
src/relative_pose_node/install/relative_pose_node/lib/relative_pose_node/: relative_pose_node  sub_node  test_node
src/relative_pose_node/install/relative_pose_node/share/relative_pose_node/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
src/relative_pose_node/install/relative_pose_node/share/relative_pose_node/cmake/: relative_pose_nodeConfig.cmake
src/relative_pose_node/install/relative_pose_node/share/relative_pose_node/launch/: relative_pose_launch.py
src/relative_pose_node/log/: latest_build
src/relative_pose_node/src/: moveit2_test.cpp  relative_pose_node.cpp  test.cpp
(+63 files in other folders)
