cmake_minimum_required(VERSION 3.20)
project(motive_streamer)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

set (CMAKE_CXX_STANDARD 17)

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)
find_package(rclcpp REQUIRED)
find_package(std_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(rosidl_default_generators REQUIRED)

include_directories(
  ${CMAKE_SOURCE_DIR}/include
  ${CMAKE_SOURCE_DIR}/natnet/include
)

add_executable(${PROJECT_NAME}_node)

target_sources(${PROJECT_NAME}_node
  PRIVATE
    src/motive_streamer.cpp
    src/motive_streamer_main.cpp
)

rosidl_generate_interfaces(${PROJECT_NAME}
  "msg/MotiveRigidBody.msg"
  "msg/MotiveRigidBodyList.msg"
  DEPENDENCIES geometry_msgs
)
rosidl_get_typesupport_target(cpp_typesupport_target "${PROJECT_NAME}" "rosidl_typesupport_cpp")       

target_link_directories(${PROJECT_NAME}_node
  PUBLIC
    ${CMAKE_SOURCE_DIR}/natnet/lib
)
target_link_libraries(${PROJECT_NAME}_node
  PUBLIC
    ${geometry_msgs_TARGETS}
    ${std_msgs_TARGETS}
    ${cpp_typesupport_target}
    rclcpp::rclcpp
    NatNet
)

install(
  TARGETS ${PROJECT_NAME}_node
  DESTINATION lib/${PROJECT_NAME}
)
install(
  DIRECTORY launch
  DESTINATION share/${PROJECT_NAME}
)
install(
  DIRECTORY config
  DESTINATION share/${PROJECT_NAME}
)
install(
  FILES 
    ${CMAKE_SOURCE_DIR}/natnet/lib/libNatNet.so
  DESTINATION lib
)


if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
